fix notice text overflow

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -211,11 +211,18 @@
     overflow-y: auto;
 }
 
+#dashboard-notices {
+    height: 100%;
+}
 .dashboard .note  {
     padding: 15px;
     padding-bottom: 0;
+    height: 30%;
+    overflow: auto;
 }
-
+.dashboard .note:first-child {
+    height: 40%
+}
 .dashboard .note p {
     font-size: 12px;
     margin-top: 0;
